Add more css in odin-recipes I added minor cosmetics to my odin-recipes project such as some pseudo selectors to change the link color from white to orange upon hover and when clicked it changes from orange to purple. I added a pseudo selector to all three "home" buttons of my recipe pages. It now goes from light gray to more of a moderate gray upon clicking.

--- a/recipes/mac-cheese/styles.css
+++ b/recipes/mac-cheese/styles.css
@@ -38,9 +38,14 @@ a {
 }
 
 button {
+    cursor: pointer;
     padding: 5px;
     margin: 20px auto;
 
+}
+
+button:active {
+    background-color: gray;
 }
 
 img {
